# suffix_tree

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: Node.h  OneToOneCode.h  Suffix.h  SuffixTree.h
scripts/: run.sh
src/: Node.cpp  OneToOneCode.cpp  Suffix.cpp  SuffixTree.cpp  main.cpp
test/: OneToOneCode_test.cpp  SuffixTree_test.cpp
